[gd_scene load_steps=2 format=3 uid="uid://b5v8r7xd2n1yl"]

[ext_resource type="Script" path="res://ui/LoadoutMenu.gd" id="1_x8v4r"]

[node name="LoadoutMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_x8v4r")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Loadout Menu"
horizontal_alignment = 1

[node name="BulletList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_minimum_size = Vector2(200, 100)

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Cancel"
custom_minimum_size = Vector2(60, 20)

[node name="ApplyButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Apply"
custom_minimum_size = Vector2(60, 20)